Bug 1260153 - remove unreachable code in nsMixedContentBlocker.  if/else blocks above all return. r=ckerschb